feat: add free US and UK market earnings
